--- a/src/hovezi-maso-a-rozlicna-jeho-uprava.html
+++ b/src/hovezi-maso-a-rozlicna-jeho-uprava.html
@@ -86,7 +86,7 @@
 
 <p>Usekej kus libového masa se čtyřmi cibulemi na kaši, osol to a okořeň trochu bílým pepřem, pak to prohněť a dělej z toho podlouhlé placičky, omoč je v rozkloktaném vejci, obal ve strouhané žemličce a usmaž je na pánvi do hnědožluta; potom je vyndej na rendlík, do másla, v němž se smažily, dej vařečku mouky a nech to trochu sežloutnout, pak přidej k tomu trochu hovězi polívky, trochu vina a trochu kaperli, proceď to na roštěnec a nech všecko pospolu povařit; potom to dej na mísu, udělej okolek ze zemčátek a nes to na stůl.</p>
 
-<a name="gulas-gulaschfleisch"><h2>Gulaš <i>(Gulaschfleisch)</i></h2></a>
+<a name="gulas"><h2>Gulaš</h2></a>
 
 <p>Rozkrájej na malé kostky pro 6 osob nejméně půl druhé nebo dvě libry hovězího masa, buď od svíčkové pečeně nebo ze spodního šálu, dej ho na rendlík, k němu kousek másla (na dvě libry masa asi tři loty), dvě cibule á petruželóvý kořínek, oboje drobně rozkrájeno, a nech to spěšně dusit; kdyby to tuze vysmáhlo, podlej to trochou hovězí polívky nebo také vody, osol to patřičně, a dej k tomu trochu majoránky, trochu tureckého pepře (Paprika) nebo jen obyčejného pepře; když to dáš na mísu, udělej okolo věnec ze zemčat.</p>
 
