--- a/src/kolace-buchty-rozlicne-jine-pecivo-a-pamlsky.html
+++ b/src/kolace-buchty-rozlicne-jine-pecivo-a-pamlsky.html
@@ -98,7 +98,7 @@
 
 <p>Utři čtvrt libry nového másla, dej do žejdlíka dobré kyselé smetany 6 žloutků, 3 lžíce hustých kvasnic, asi dva loty tlučeného cukru, trochu soli, všecko dobře rozkloktej, pak tím zadělej pěknou suchou mouku hezky hustě, těsto dobře vypracuj, až jde od vařečky, načež posyp servít moukou, rozválej na něm těsto asi na dvě stébla tlustě, pomaž ho rozpuštěným máslem, posyp tlučeným cukrem a skořicí pak na dlouho rozkrájenými mandlemi, vymaž formu máslem, vysyp ji aneb vylož mandlemi, buchtu pěkně sviň, dej ji do formy a nech ji tři čtvrtě hodiny kynout<b>, </b>pak aspoň tři čtvrtě hodiny pect; potom ji vyklop, posyp cukrem a skořicí a nech ji vystydnout. Do této buchty můžeš také místo uvedených věcí dáti dobře upravený mák.</p>
 
-<a name="trena-buchta-kugelhupf"><h2>Třená buchta <i>(Kugelhupf)</i></h2></a>
+<a name="trena-buchta"><h2>Třená buchta</h2></a>
 
 <p>Utři 6<b><i>,</i></b> lotů převařeného a 6 lotů nového másla, až se pění, vraz do něho 10 žloutků, každý dobře zamíchej, pak dej do toho asi 4 loty na citronu otřeného tlučeného cukru, 3 lžíce hustých kvasnic, trochu soli, 5 lžic dobré smetany, trochu vanilie, a posléz do toho zběžně zamichej půl libry pěkné prosáté mouky; potom vymaž formu, a je-li jako hvězda, tedy vylož jeden žlábek na dlouho rozkrájenými a druhý rozpůlenými mandlemi, vlej těsto do ní á nech ho tři čtvrtě hodiny kynout, pak aspoň tři čtvrtě hodiny zvolna pect; potom buchtu vyklop, posyp ji hned teplou cukrem a vanilií a nech ji vychladnout.</p>
 
@@ -196,7 +196,7 @@
 
 <p>Nech na rendlíku zvařit žejdlík mléka se čtyřmi loty másla, čtyřmi loty cukru a krapýtkem soli, přimíchej k tomu žejdlík pěkné mouky, a stále tím míchej, až se utvoří pěkné tuhé těsto, které již ani rendlíku ani vařečky se nechytá, pak ho vyndej na misku, a když prochladne, přimíchej k němu čtyry žloutky jeden po druhém a dvě celé vejce, a hodně to umíchej; potom dej těsto na vál posypaný moukou, udělej z něho malé kulaté kobližky, klad je na plech potřený máslem, pomaž je rozkloktaným vejcem a nech je při mírném ohni pect; když vyběhnou hodně do výšky, vyndej plech z trouby, kobližky posyp tlučeným cukrem a nech je dopect; potom je vyndej, a když docela vychladnou, nařízni každou po straně nožem a naplň je nějakou zavařeninkou.</p>
 
-<a name="suchary-zwieback"><h2>Suchary <i>(Zwieback)</i></h2></a>
+<a name="suchary"><h2>Suchary</h2></a>
 
 <p>V libře mouky rozemni dvanáct lotů másla, rozkloktej v hrnečku ve tři čtvrti žejdlíku dobrého mléka tři celé vejce a jeden žloutek, vlej to do mouky, přidej k tomu dva loty rozdělaných lisovaných kvasnic, čtyry loty oloupaných usekaných mandli, osol to patřičně a zadělej těsto hodně tuhé, vypracuj, ho, až se nechytá na vařečku, a nech ho kynout; potom ho dej na vál, udělej z něho dva podlouhlé úzké bochánky, podobající-se šiškám, a nech je ve chladném místě, aby se nerozběhly, hodně vyhynout, pak je pomaž rozkloktaným vejcem a upeč je. Když vychladnou, nakrájej je přespříč na stejné, asi na prst tlusté kousky, osuš je na plechu v troubě a pak je posyp po obou stranách tlučeným cukrem a skořicí.</p>
 
