--- a/src/nalozeniny-k-hovezimu-masu.html
+++ b/src/nalozeniny-k-hovezimu-masu.html
@@ -36,7 +36,7 @@
 
 <p>Červená řepa se čistě omeje, do měkka uvaří, pak se oloupá, rozkrájí na koláčky a takto se naloží: Oškrab křen a rozkrájej ho na koláčky, potom vlož do hrnku vrstvu řepy, oblož ji několika koláčky křenu, posyp trochu anýzem nebo feniklem a trochu solí, na to dej opět vrstvu řepy, pak zase to ostatní, a tak pokračuj, až jest všecko naloženo, potom na to nalej dobrý vinni ocet – a ve čtyryadvaceti hodinách jest řepa k potřebě.</p>
 
-<a name="nalozene-brusinky-preiseifelbeeren"><h2>Naložené brusinky <i>(Preiseifelbeeren)</i></h2></a>
+<a name="nalozene-brusinky"><h2>Naložené brusinky</h2></a>
 
 <p>Přeber a vyper zralé brusinky, dej je na rendlík, nalej na ně čtvrt žejdlíka vody a též tolik vinného octa, přidej k tomu čtvrt libry cukru a nech to vařit; když se brusinky již hezky povařily, vyndej je do hrnku, je-li příliš mnoho šťávy, slej ji a nech ji ještě trochu do hustá svařit, pak ji nalej na brusinky, hrnek obvaz silným papírem a postav ho do chladného místa. – Také se mohou brusinky bez octa a vody, pouze ve vlastni šťávě zvařit a uschovat; když pak se v zimě maji dát k nějaké pečeni, tedy se na ně naleje trochu rakouského vína a posypou se hodně cukrem.</p>
 
