--- a/src/omacky-k-hovezimu-masu.html
+++ b/src/omacky-k-hovezimu-masu.html
@@ -34,7 +34,7 @@
 
 <p>Udělej ze dvou lotů loje hnědou jíšku, dej do ní jednu nakrájenou cibuli, 10 zrnek pepře a 10 zrnek nového kořeni, kousek zázvoru, dva bobkové listy, kousek dymiánu, nalej na to hovězí polívky tolik, mnoho-li je na omáčku potřebí, a přidej k tomu asi dvě lžíce octa; když se vše hodně dlouho pospolu vařilo proceď to do hrnku; je-li omáčka příliš hustá přilej polívky, okus ji, a je-li málo kyselá, přidej krapýtek octa.</p>
 
-<a name="omacka-z-kerblika-kerbelkranz"><h2>Omáčka z kerblíka <i>(Kerbelkranz)</i></h2></a>
+<a name="omacka-z-kerblika"><h2>Omáčka z kerblíka</h2></a>
 
 <p>Utluč v moždíři plnou hrst kerblíku a vymačkej šťávu skrze plátýnko, pak vezmi 3 na tvrdo vařené žloutky a několik topinek sušené a ve vinném octě namočené žemličky, oboje v moždíři dobře utluč, octem rozdělej, tu kerblíkovou šťávu k tomu přimíchej a oslaď to asi lotem cukru. Lot cukru, půl žejdlíka octa a z půl žemličky sušených topinek jest dosti na tři žloutky. Tato omáčka se dá studená na stůl v nádobkách k tomu zřízených. Kdo rád sladší, může přidat cukru. Při hostině se dá na stůl mimo této omáčky ještě jedna teplá, protože každý studené omáčky nemiluje.</p>
 
