--- a/src/pecene.html
+++ b/src/pecene.html
@@ -104,7 +104,7 @@
 
 <p>Zajíce stáhni, předek odděl, zadek očisti ode všech kůžiček, čistě ho přemej, osol a protáhni ho husté čtyřmi řadami čerstvou slaninou; pak dej na pekáč ty odřízky od slaniny a kousek másla, vlož na to ten zaječí zadek, polej ho trochou vody a nech ho pect, musí se však častěji obracet; když jest přes polovic upečen, polévej ho hustou kyselou smetanou, a nech ho již pořád tou vyslaněnou stranou vzhůru ležet; potom nech v hrnečku rozpustit něco přes lot čerstvého másla, dej do něho kávovou lžičku mouky, rozmíchej to, nalej do toho kyselé smetany, a polévej tím lžicí zajíce tak dlouho, až je pěkně do červena upečen; pak ho dej na mísu, podlej pod něj tu procezenou omáčku a dej ho na tabuli.</p>
 
-<a name="mlady-zajic-marzhase"><h2>Mladý zajíc <i>(Märzhase)</i></h2></a>
+<a name="mlady-zajic"><h2>Mladý zajíc</h2></a>
 
 <p>Stáhni mladého zajíčka, předek odděl, zadeček očisti ode všech kůžiček, čistě ho přemej, dobře ho nasol, protáhni ho hustě slaninou, nastrč na rožeň, nech. ho pect a polévej ho rozpuštěným novým máslem; při pěkném ohni jest upečen za půl, nejdéle za tři čtvrtě hodiny; potom ho dej na misku, podlej ho tím máslem, které odkapalo do podstaveného pekáčku, a dej ho na tabuli. – Kde není příležitost k pečení na rožni, tedy dej na pekáček ty odřízky od slaniny a kousek másla, vlož na to ten zaječí zadeček, podlej pod něj něco málo vody a nech ho hezky prudce pect (čím jest mladčí, tím prudčeji); pak ho dej na mísu, podlej pod něj tu procezenou omáčku a dej ho na tabuli.</p>
 
@@ -128,7 +128,7 @@
 
 <p>Dej do vinního octa bobkové listí, dymián, cibuli, pepř, zázvor, nové koření, slaninu, a nech to zvařit, pak vychladnout; potom do toho vlož dobře obraného tetřeva a nech ho v tom nejméně tři dni ležet; musí se ale každodenně obracet, a ve chladném místě může ležet 8 i 10 dní; pak tetřeva pěkně slaninou prostrkej, nastrč na rožeň a nech ho zpovolna pect, přičemž ho polévej tím mokem a masti novým máslem; načež mok nech zvařit a zakloktej ho kyselou smetanou a trochou hovězí polívky. Když je tetřev hezky do tmava upečen, dej ho na mísu a podlej tou omáčkou.</p>
 
-<a name="sluky-schnepferr"><h2>Sluky <i>(Schnepferr)</i></h2></a>
+<a name="sluky"><h2>Sluky</h2></a>
 
 <p>Z čistě oškubaných sluk vyndají se vnitřnosti, usekají se, dají se na rendlíček, dá se k nim kousek másla, trochu sekané zelené petružele, trochu květu, trochu soli, a nechá se to na uhlíčku dusit. Sluky se pečou na rožni, mastí se dobře novým máslem, a podstaví se pod ně pekáček, aby z nich kapající šťáva se zachovala; pak se usušejí žemličkové topinky a namažou se tou ze sluk výkapanou šťávou jakož i těmi dušenými vnitřnostmi; potom se dají na mísu sluky do prostřed a topinky okolo.</p>
 
