--- a/src/rozlicna-masla.html
+++ b/src/rozlicna-masla.html
@@ -26,7 +26,7 @@
 
 <p>Z másla žlutého, zeleného a černého mohou se dělati všelijaké věci, jako: košíčky, pyramidy atd. K okrašlování se zelené máslo dá do stříkánkové formy a protlačí se skrze řídké sejtko, uvnitř formy se nacházející, nebo se protlačí skrze cedník, anebo skrze stříkánkovou hvězdu <i>(Spritzfrapsenform)</i>. Zkušená kuchařka ostatně lehce pochopí, co se k čemu hodí, aby se to chutnější a ouhlednější stalo.</p>
 
-<a name="maslo-s-bylinkami-toleranz"><h2>Máslo s bylinkami <i>(Toleranz)</i></h2></a>
+<a name="maslo-s-bylinkami"><h2>Máslo s bylinkami</h2></a>
 
 <p>Utře se čtvrt libry čerstvě tlučeného másla, osolí se a dá se k němu buď drobně rozkrájené routy, nebo kopru anebo pažitky <i>(Schnittling)</i>, dobře se promíchá a buď se jen bochánek z něho udělá, nebo se dá do porcelánové nebo skleněné nádobky a nechá se ve sklepě hodně ztuhnout; nebo se skrze stříkánkovou formu jako šnek na talíř protlačí a nechá se ve sklepě ztuhnout. Polovic toho másla a polovic tvarohu je tak nazvaná rozhuda (Toleranz) a v letě s chlebíčkem k pivu výborně chutná. Tato rozhuda nebo máslo může se rozličně okrášlit, ku př. na jaře věncem z bílých a červených řetkviček, nebo barevným máslem.</p>
 
