--- a/src/rozlicne-ryby.html
+++ b/src/rozlicne-ryby.html
@@ -270,7 +270,7 @@
 
 <p>Stáhni kůži se třech mléčních slanečků, vlož je do mléka a nech je v něm přes noc ležet; druhý den je čistě omej, mléčí vyndej do hrnečku, slanečky rozpůlí, kůstky vyndej, slanečky nakrájej na kousky a vlož je do hluboké nádobky; nyní mléči hodně rozetři se dvěmi lžícemi brabancového oleje, a přidávej k tomu po lžících vinního octa, až máš dostatečně omáčky k pokrytí slanečků, načež to ještě hodně kloktej, až to zhoustne; potom usekej drobounce jednu velkou cibuli, posyp ní slanečky, nalej na to omáčku a uschovej to k další potřebě. V čas nouze poskytne to dobrou večeři.</p>
 
-<a name="treska-stockfisch-omastena-a-krenem"><h2>Treska (<i>Stockfisch</i>) omaštěná a křenem</h2></a>
+<a name="treska-omastena-a-krenem"><h2>Treska omaštěná a křenem</h2></a>
 
 <p>Dobře močenou tresku přemej ve studené vodě, rozkrájej ji na čtyrhrané kousky, urovnej ji do hrnku, osol ji, nalej na ni vřelé vody a nech ji vařit, až je dost měkká; pak ji oceď, kůžičku s ní oloupej, narovnej ji na mísu, posyp ostrouhanou žemličkovou kůrkou, omasti smaženou cibulkou, a dej k ní na stůl buď smetanový křen nebo hořčici.</p>
 
