--- a/src/sladke-rosoly.html
+++ b/src/sladke-rosoly.html
@@ -2,7 +2,7 @@
 
 <p>Má-li snaha kuchařčina dobrým zdařením následujících, velkou trpělivost vyžadujících jídel býti poněkud odměněna, musí tři hlavni věci přísně na zřeteli míti: předně, aby si zaopatřila nejlepší druh vyzího měchýře, totiž takový, který bělostí a průhledností vyniká; za druhé, aby vyzí měchýř náležitě učistila a zvařila, a za třetí, aby hotový rosol dobře z formy na mísu vyklopila, což takto se děje: Když je čas nésti rosol na stůl, omočí se forma se ztuhlým rosolem v horké vodě, spěšně se otře, položí se na ni plochá mísa, s touto se forma obrátí, načež se forma zvolna a opatrně zdvihá; kdyby rosol ještě při formě držel, tedy se musí ohřát nějaký šat a forma ním všude natírat, také se musí lehkým zatřesením formy odpadnutí rosolu napomáhat. Tímto způsobem se všecky rosoly z forem vyndávají. Kdyby se ale začátečnice v kuchaření této nesnadné práci chtěla vyhnouti, tedy může každý rosol místo do formy nalejt do pěkné buď skleněné nebo porcelánové mísy, a když rosol ztuhne, s touto mísou jej na stůl postavit.</p>
 
-<a name="cisteni-vyziho-mechyre-hausenblase"><h2>Čistění vyzího měchýře <i>(Hausenblase)</i></h2></a>
+<a name="cisteni-vyziho-mechyre"><h2>Čistění vyzího měchýře</h2></a>
 
 <p>Pěkný průhledný vyzí měchýř se nejprve ve vodě oplákne, pak se rozklepe, nastřihá aneb na drobno rozškube, naleje se na něj voda (vždy na jeden lot půl žejdlíka) a nechá se přes noc močit; druhý den se postaví na plotnu a při pilném míchání, aby na dno nepřilehl, a opěnování nechá se na polovičku vyvařit, pak se procedí skrze čistý klůcek, a jest připraven k potřebě.</p>
 
@@ -52,7 +52,7 @@
 
 <p>Upraví se na tentýž způsob, jenom že se musí na žejdlík šťávy čtyry loty cukru přidat a citronová šťáva vynechat, poněvadž rybíz již sám v sobě mnoho ostrosti chová.</p>
 
-<a name="rosol-z-kavy-kaffee"><h2>Rosol z kávy <i>(Kaffee)</i></h2></a>
+<a name="rosol-z-kavy"><h2>Rosol z kávy</h2></a>
 
 <p>Nech na rendlíku zvařit 4 žejdlíky dobré sladké smetany, upraž 6 lotů kávy, otři ji zčerstva čistým šatem a dej ji tak neumletou do té smetany, přikrej to a nech to chvilku stát, potom k tomu přidej půl třetího lotu dle předpisu v čís. 1. rozmočeného a zvařeného vyzího měchýře, kousek rozkrájené vanilie, 8 lotů cukru, a nech to asi čtvrt hodiny vařit; pak to proceď skrze husté žíněné sejtko, dej to ještě jednou na tentýž rendlík vařit, rozmíchej v hrnečku 3 žloutky s trochou studené vařené smetany, a když se rosol zase klokotem vaří, tedy ho tím zakloktej. Nyní to ale již nenech vařit, nýbrž proceď to skrze servít ke čtyřem nohám obrácené stolice uvázaný, a když to prochladne, vlej to do formy a nech to ustydnout; pak rosol vyklop na svrchu popsaný způsob, okrášli ho vanilovými hubinkami a dones ho na stůl.</p>
 
