Nadpisy bez závorek

--- a/src/hovezi-maso-a-rozlicna-jeho-uprava.html
+++ b/src/hovezi-maso-a-rozlicna-jeho-uprava.html
@@ -66,7 +66,7 @@
 
 <p>Není-li naložená svíčková pečeně, mohou se karbanátky takto připravit ze sekaného hovězího masa, jenom že se musejí při sekáni trochu osolit a okořenit tlučeným pepřem.</p>
 
-<a name="rostenec-rostbraten"><h2>Roštěnec (Rostbraten)</h2></a>
+<a name="rostenec"><h2>Roštěnec</h2></a>
 
 <p>Dej si hned v masném krámě od řezníka nařezat ouhledné řízky z boku, které pak musíš obráceným nožem jako karbanátky naklepat a osolit; potom se rozpustí kus másla, utře se soli několik stroužků česneku, vhodí se do toho másla a nechá se zapěnit, pak se ty řízky v tom másle omočí a nechají se spěšně na rošti na uhlí po obou stranách hezky do hnědá opéct; takto se-dají na tabuli a k nim na čtvrtky nakrájené citrony. Nejsou-li právě tak nazvané rostbrátle k dostáni, tedy se může kypré maso z kejty sklepat, jako karbanátky okulatit, v másle omočit, na rošti upéct, a dát na tabuli s citronovými čtvrtkami. Toto se může buď v poledne místo hovězího masa, nebo u večer jakožto pečeně požívat. Jsou-li u tabule samí mužští, může se každý řízek mimo solí také ještě trochu pepřem posypat. Edo není milovník česneku, může nechat místo téhož drobně rozkrájenou cibulku v másle zapěnit.</p>
 
