--- a/src/moucna-jidla-obycejna-i-jemnejsi.html
+++ b/src/moucna-jidla-obycejna-i-jemnejsi.html
@@ -8,7 +8,7 @@
 
 <p>Rozkverluj čtyry žloutky v žejdlíku vody až do spěnění, osol to a zadělej tím dva žejdlíky pěkné mouky na misce; nakrájej na drobné kostky dvě žemličky, vlož je na vrch na těsto, nech rozpustit čtvrt libry čerstvého másla, polej ním opatrně ty žemličkové kostky a nech tak těsto dvě hodiny stát. Když je čas k zaváření, zamíchej vařečkou žemličku do těsta, hodně ho ještě protluč, pak dělej hezky velké knedlíky, klad je do vařící slané vody a nech je nepřikryté hodně provařit; potom je vyndej, rozpul každý, posyp strouhanou žemličkovou kůrkou a polej rozpáleným máslem. Tyto knedlíky jsou též výborné.</p>
 
-<a name="knedliky-se-slaninou-spekem"><h2>Knedlíky se slaninou (špekem)</h2></a>
+<a name="knedliky-se-slaninou"><h2>Knedlíky se slaninou</h2></a>
 
 <p>Rozkrájej na kostky půl libry slaniny a dvě žemličky, a nech to pohromadě na rendlíku pěkně usmažit, pak to dej na mísu a nech to vychladnout; pitom do toho vraz 4 celé vejce a 4 žloutky, dej k tomu dvě na kousky rozkrájené, ve smetaně máčené žemličky, a tolik mouky, mnoho-li na těsto zapotřebí, načež to promíchej a osol; pak usekej půl libry uzeného libového masa a dělej knedlíky; dej vždy do prostřed těsta hromádku toho sekaného libového masa, knedlíky pěkně zakulať a nech je vařit ve slané vodě nebo v té polívce, v které se vařilo uzené maso; když jsou uvařeny, posyp je strouhanou žemličkovou kůrkou a polej rozpáleným máslem. To sekané uzené maso může se také do těsta zamíchat.</p>
 
@@ -106,7 +106,7 @@
 
 <p>Udělej ze dvou vajec obyčejných flíčků, uvař je ve slané vodě, oceď je a nech je prochladnout; zatím utři asi dva loty nového másla a dej pak do něho ty flíčky. Oloupej asi 6 míšeňských jablek, vykroj z nich ohryzky a nech je na kasičku udusit; dej do nich dva loty malých hrozinek, asi dva loty cukru, lot oloupaných, drobně rozkrájených sladkých mandlí a trochu skořice; pak to všecko zamíchej do těch flíčků, vymaž buď mísu nebo formu anebo kuthánek máslem, vysyp nádobku žemličkovou kůrkou, dej do ní ty flíčky, posyp je. cukrem a skořicí, a nech je vypéct; pak je zase posyp cukrem a skořicí, a nes je na tabuli.</p>
 
-<a name="smazenec-schmorn-z-mouky"><h2>Smaženec (Schmorn) z mouky</h2></a>
+<a name="smazenec-z-mouky"><h2>Smaženec z mouky</h2></a>
 
 <p>Vraz do hrnku 6 vajec, přilej k nim půl žejdlíka sladké smetany, osol to, vmíchej do toho tolik mouky, aby to bylo jako řidounké těstíčko na kapání, také do toho můžeš dát trochu tlučeného cukru, vlej to na rendlík do rozpáleného másla a nech to v troubě pěkně vypéct; pak to železnou lopatkou nebo plechovou lžicí drobně rozkrájej a nech to na uhlíčku ještě trochu opéct; musíš tím ale míchat, aby se to nepřipálilo; potom to dej na misku a posyp cukrem.</p>
 
@@ -206,7 +206,7 @@
 
 <p>Vezmi na vál 2 žejdlíky mouky, dej do ní asi 2 nebo 3 loty másla, rozemni ho v mouce, vraz do toho 2 celé vejce a 3 žloutky, a zadělej, vyválej a rozválej těsto tak jako na nudle, osol ho trochu, nakrájej z něho najpůl čtvrtky dlouhé a též tak široké kousky, usekej drobně račí ocásky, ústrouhej 6 lotů oloupaných sladkých mandlí, dej k tomu strouhané smažené žemličky, tlučeného cukru, dobře to promíchej a potírej tím ty lístky, pokrop je pěkně račím máslem, okolky pomaž rozkloktaným bílkem, a zaviň je jako jiné štrudličky; pak vymaž mísu novým máslem, narovnej do ní štrudličky pěkně do věnečka jednu vedle druhé, rozkloktej smetanu s cukrem, polej ní ty štrudle a nech je v troubě znenáhla vypéct, pak je posyp cukrem a nech je ještě opéct; potom je zase cukrem posyp a nes na stůl.</p>
 
-<a name="lite-strudle-omeletky-s-miseninkou"><h2>Lité štrudle (omeletky) s míšeninkou</h2></a>
+<a name="lite-strudle-s-miseninkou"><h2>Lité štrudle s míšeninkou</h2></a>
 
 <p>Vraz do hrnku 4 celé vejce a dva žloutky, a vmíchej do toho tolik mouky aby to bylo jako husté kapané těsto pak do toho vlej malý žejdlík dobrého sladkého mléka, osol to trochu, dobře to rozmíchej, namaž rozpálenou omeletní pánev rozpuštěným máslem a lej z toho tenké lístky. Nádivku dělej takto: Utři 2 loty másla, udělej 5 míchaných vajec, usekej je a dej k němu, mimo to k tomu připoj asi 30 rozkrájených račích ocásků, kousek na másle dušeného usekaného telecího masa, tři čistě omyté a s máslem utřené sardele, jednu ostrouhanou, ve smetaně namočenou vymačkanou žemličku, všecko dobře promíchej, dej do toho trochu květu a trochu to osol. Nyní tím pomaž ty lístky, zaviň je, vlož je na máslem vymazanou mísu nebo kuthánek, polej je sběračkou mastné polívky, poklad je máslem a nech je v troubě hezky vysmahnout.</p>
 
