--- a/src/nakypy.html
+++ b/src/nakypy.html
@@ -42,7 +42,7 @@
 
 <p>Udělej řiďounké těsto jako na kapáni, zavař ho do smetany, aby z toho byla hustá kašička, míchej tím pořád, až to pěkně vysmahne, a nech to vychladnout; potom k tomu vraz 6 žloutků, vmíchej do toho z pěti bílků sníh, oslaď to dle libosti a dej k tomu drobnince rozkrájenou citronovou kůru; nyní vymaž formu a vysyp ji žemličkou, vlej do ní polovici toho těsta, pak nadělej hromádek ze zavařeného rybízu, nebo to poklaď višněmi, na to nalej to ostatní těsto a nech to hezky do červena upect; pak to posyp cukrem. Nemáš-li zavařený rybíz ani višně, tedy to můžeš nech; prázdné, anebo můžeš do toho dát buď strouhané horké mandle nebo vanilii; na každý způsob je to dobré.</p>
 
-<a name="nakyp-z-hoveziho-tuku-morku"><h2>Nákyp z hovězího tuku (morku)</h2></a>
+<a name="nakyp-z-hoveziho-tuku"><h2>Nákyp z hovězího tuku</h2></a>
 
 <p>Rozetři dobře 4 loty tuku, ostrouhej kůrku se 4 žemliček, rozkrájej je na kousky, namoč je v dobré sladké smetaně, pak je vymačkej, dej k nim ten utřený tuk, dva žloutky a dvě celé vejce, drobně rozkrájenou citronovou kůru, trochu skořice, trošínku soli, 3 loty cukru, a dobře všecko rozmíchej; nyní vymaž formu máslem, vysyp ji žemličkou, vlej do ní tu míchaninku (kdyby to bylo tuze husté, můžeš do toho přilejt trochu sladké smetany) a nech ta zvolna hezky do žlutá upéct; potom to vyklop, posyp cukrem a skořici, a dej to na stůl.</p>
 
