--- a/src/napoje.html
+++ b/src/napoje.html
@@ -1,6 +1,6 @@
 <a href="index.html" class="hlavicka"><h1>Nápoje</h1></a>
 
-<a name="citronova-voda-limonada"><h2>Citronová voda (limonáda)</h2></a>
+<a name="citronova-voda"><h2>Citronová voda</h2></a>
 
 <p>Na žejdlík vody ostrouhej na cukru kůru s půl citronu, vytlač k tomu z půl citronu šťávu, zamíchej do toho asi půl druhého nebo dva loty cukru – a máš chutný, občerstvující nápoj pro zdravé i nemocné. Chceš-li míti teplou limonádu, tedy dej místo studené vody vařící. – Máš-li zapotřebí mnoho limonády, tedy vymačkej tolik citronů, aby bylo šťávy půl žejdlíka, na citronové kůře ostrouhej půl libry cukru, potom dej šťávu i cukr na mosazný kotlíček a nech přes to přejít jen jeden var, pak to proceď skrze čistý šat a nech to vychladnout; Lžička této šťávy stačí do sklenice vody.</p>
 
@@ -44,7 +44,7 @@
 
 <p>Ustrouhá se dle potřeby několik tabulek čokolády, ku př. na žejdlík vody čtyry tabulky, a nechá se mezi ustavičným kloktáním uvařit; žloutky se vynechaji.</p>
 
-<a name="kava-kafe"><h2>Káva (kafé)</h2></a>
+<a name="kava"><h2>Káva</h2></a>
 
 <p>Zelená káva nasype se na pánvičku nad uhlíčkem, a pořád se ni míchá, až začne žloutnout a vůni ze sebe vydávat, pak se trochu posype tlučeným cukru a mezi ustavičným mícháním se hezky do hnědá upraží; potom se umele a zavaří se do připravené vařící vody, nebo se dá do mašiny k tomu zřízené. Vaří-li se v hrnku, musí se přikrejt pokličkou, aby s parou chuť nevyšla. K čistění kávy jest nejpříhodnější následující prostředek: Ve studené vodě rozkloktá se kouštínek žloutku, a když jest káva v nejlepším varu, vleje se do ni a nechá se ještě jeden var přejít, pak se zaleje trochou studené vody a nechá se jen chvilenku ustát; tak jest jistě čistá jako křišťál. Na jeden koflíček kávy, když má býti beze vši přísady, dává se nejméně 60 zrnek. Když se káva sleje, tedy se na to usedlé naleje vody, nechá se to vyvařit a schová se to k příštímu vaření na místo vody.</p>
 
