--- a/src/ovocni-zavareninky.html
+++ b/src/ovocni-zavareninky.html
@@ -64,7 +64,7 @@
 
 <p>Neoloupaná gdoulová jablka nech na předešlý způsob rozvařit a též tak je proceď. Na libru šťávy přetluč půl druhé libry cukru, dej oboje na čistý rendlík a nech to mezi ustavičným mícháním tak dlouho vařit, až to jako kaše zhoustne; pak to odstav a naplňuj tím rozličné tvořítka nebo kávové mističky, dříve ve vodě omočené, a nech to ztuhnout; potom to vyklop, nech to ještě několik dní v teplém místě sušit a pak teprva to uschovej. Také se z toho může na vále, cukrem posypaném, udělat jitrnička, a když oschne a dá se krájet, tedy se přespříč nakrájí na kotoučky, což cukráři gdoulovým sýrem nazývají.</p>
 
-<a name="stava-z-dristalek-berbetisbeeren"><h2>Šťáva z dřišťálek (Berbetisbeeren)</h2></a>
+<a name="stava-z-dristalek"><h2>Šťáva z dřišťálek</h2></a>
 
 <p>Když zralé dřišťálky několikrát mráz obešel, tedy je nasbírej a nech je čtyryadvacet hodin ve vlahém místě, pak je rozmačkej a šťávu skrze starý čistý ubrousek proceď, načež ji nech opět stát, aby se učistila. Kolik pak žejdlíků čisté šťávy sleješ, tolik liber cukru musíš jemně utlouct, potom ho dej i se šťávou do nového kastrolu a nech to na mírném ohni několik minut vařit, přičemž pěnu sbírej; načež to ještě jednou proceď a slej to do lahvic, které zátkou dobře zandané v suchém místě uschovej.-Tato šťáva jest v domácnosti velmi prospěšná; můžeť se jí místo citronové šťávy do jídel použit, anebo s vodou smíšená poskytne v letě velmi občerstvující nápoj.</p>
 
