--- a/src/pecene.html
+++ b/src/pecene.html
@@ -58,7 +58,7 @@
 
 <p>Podeber vepřový podbříšek ostrým nožem, udělej z několika strouhaných žemliček podle velkosti podbříšku nádivku jako do telecí ledviny (čís. 7, str. 264), jen že nemusíš dát žádné máslo, poněvadž se z tučné pečeně mastnota do ní vtáhne, naděj maso, dobře ho zaši a nech ho pect nejprve na tlusté straně, pak ho obrať, nakrájej kůži na kostky a nech ho dopect jako předešlou pečeni. Nádivkou podbříšek hodně nabyde a velmi dobře chutná.</p>
 
-<a name="podsvince-sele"><h2>Podsvinče (sele)</h2></a>
+<a name="podsvince"><h2>Podsvinče</h2></a>
 
 <p>Když je podsvinče opařené a vykuchané, uřež nožky až pod kolínka, podsvinče čistě omej, nasol ho uvnitř i zevnitř, do huby mu strč malý špalíček, aby zůstala trochu otevřená, do vnitř dej trochu kmínu a malou podlouhlou skývu chleba, zaši ho, prostrč skrze zadní i přední nohy železné špejle a polož ho zádama na dva nebo na tři přespříč pekáče schválně udělané železné pruty, do pekáče nalej trochu vody, aby nepraskl, poptav ho do horké trouby a mezi pečením potírej podsvinče pírkem v rozpuštěném másle namočeným; když je na bříšku dost červené, obrať ho a potírej ho opět velmi pilně na zádech, na ouška pak udělej malé kornoutky, aby se nespálily. Když je podsvinče do hnědožlutá upečené, odsekni hned hlavičku, rozkrájej ji zvlášť na talířek, sele pak nakrájej na pěkné kousky a dej ho na stůl. Také se může celé podsvinče dát na podlouhlou, k tomu zvláště zřízenou mísu, s uší sejmou se kornoutky, do huby se mu strčí citron a postaví se tak na tabuli.</p>
 
