--- a/src/polivky-masite.html
+++ b/src/polivky-masite.html
@@ -226,7 +226,7 @@
 
 <p>Uvař měkce půl žejdlíka hrachu, pak ho rozmačkej a proceď do hrnku, nalej na něj dobrou hovězí polívku, přidej k tomu trošinku na prášek rozsekané majoránky, trošku zelené petruželky, dvě rozstrouhané zemčátka, a nech to vařit; zatím udělej bledou jističku, zapraž ní trochu tu polívku a vlej ji do mísy na smaženou žemličku.</p>
 
-<a name="rosol-polivkovy-glace,-cti-glas"><h2>Rosol polívkový (Glace, čti glas)</h2></a>
+<a name="rosol-polivkovy"><h2>Rosol polívkový</h2></a>
 
 <p>Vezme se 5 liber hovězího, 5 liber telecího masa, libra hovězích jater, 4 telecí nohy, 3 libry vepřové pečené, 2 staré slepice, čtvrt libry uzeného masa, 2 hřebíčkem prostrkané bílé cibule, dvě oškrabané mrkve, dva petruželové kořeny, jeden velký celer, to vše se dá na veliký kuthan, nebo do velkého měděného, dobře vycínovaného kotlíka, podleje se to asi dvouma mázy vody a nechá se to zponenáhla dusit, při čemž se pěna a mastnota sbírá a chvilkami vody se přilévá. Když to je do měkká uvařeno, proceď to skrze řídké sejtko do jiné čisté nádoby a nech to zase vařit, musíš tím však stále míchat, aby se to nepřipálilo; když se to vyvařilo do hustá jako syrob, proceď to do mělké mísy, v které se to ustydnout nechá a pak vyklopené na malé tabulky rozkrájí; nebo se to zrovna do malých, k tomu ustanovených formiček lejti může. Takovou jednou tabulkou, když se dá do mázu dosti slabé hovězí polívky, stane se tato velmi chutnou. Též k mnohým omáčkám se tento rosol výborně hodí, jak o tom dále pojednáno bude; pročež by se v každém větším hospodářství vždy v zásobě chovati měl.</p>
 
