--- a/src/prichoutky-cili-asietky.html
+++ b/src/prichoutky-cili-asietky.html
@@ -20,7 +20,7 @@
 
 <p>Nakrájej na drobno čtyry telecí brzlíčky, vlož je do rendlíku na zpěněnou na másle cibulku a nech to dusit. Na jiném rendlíčku nech opět jednu drobně nakrájenou cibulku na másle zpěnit, musí však zůstat docela bílá, dej k ní tři vařečky mouky, přilej k tomu asi půl žejdlika dobrého mléka, a míchej tím tak dlouho, až to zhoustne; potom k tomu dej ty brzlíčky a čtvrt libry očištěných, se dvěma loty másla dobře rozetřených sardelí, a všecko náležitě promíchej. Očisti ústřicové skořepiny, dej do každé hromádku té míšeninky, posyp je strouhanou žemličkou a postříkej máslem, pak je urovnej ouhledně na misku a postav je asi na deset minut do trouby, co by se prohřály, potom je oblož citronovými koláčky a nes na stůl.</p>
 
-<a name="neprave-musle-lastury"><h2>Nepravé mušle (lastury)</h2></a>
+<a name="neprave-musle"><h2>Nepravé mušle</h2></a>
 
 <p>Nech na rendlíčku rozhřát kus másla, a dej do něho tolik pěkné mouky, aby se udělala řídká jíška, pak vlej do ni hned tolik dobrého mléka, aby z toho byla hustá kaše, načež do ní vmíchej dva žloutky a ze dvou bílků sníh. Udělej na cibulce telecí mozeček, usekej na drobno kousek studené telecí pečené, dvě na tvrdo uvařené vejce, a smíchej tyto tři věci dohromady. Rozetři 3 nebo 4 sardele a nech je s lotem kaprli ve víně vařit; když je to hodně provařené, vymaž mušlové skořápky čerstvým novým máslem, dej do každé nejprve kousek té kaše, na to kousek té míšeninky z masa a vajec, pokrop to vínem, v němž se sardele vařily, navrch je pokrej opět tou kaší, posyp je strouhanou žemličkou a postříkej čerstvým novým máslem, pak je dej na plech a postav je na chvíli do trouby; potom je ouhledně narovnej na misku a nes na stůl.</p>
 
