--- a/src/salaty.html
+++ b/src/salaty.html
@@ -28,7 +28,7 @@
 
 <p>Uvař ve slané vodě čtyry pěkné růže karfiolu a čtyry celery, pak ober svrchní lupeny se třech hlávek zeleného a se třech hlávek červeně kropenatého salátu, rozkrájej je na čtvrtky a dobře je vyper; potom smíchej vinní ocet se solí a olejem, a připrav ním každý tento salát zvlášť; nyní udělej na velkou mísu nejprve okolek ze zelených hlávkových čtvrtek, pak věnec z rozebraného karfiolu, potom urovnej kropenatý hlávkový salát a do prostřed mísy dej na koláčky nakrájený a pepřem posypaný celer, který se však dříve, nežli se pepřem posype, musí polejt smíšeným octem a olejem. Aby tento salát chuť neztratil, nesmi se dělat dlouho předtím, než se dá na stůl.</p>
 
-<a name="salat-z-andivie-ze-sterbaku"><h2>Salát z andivie (ze štěrbáku)</h2></a>
+<a name="salat-z-andivie"><h2>Salát z andivie</h2></a>
 
 <p>Z andivie se vezmou jenom ty pěkné žluté lístky, dobře se očistí, malinko osolí, naproti tomu ale hodně se osladí, ostatně se připraví brabancovým olejem a vinním octem jako jiný hlávkový salát. Jenom ať jest hezky sladký.</p>
 
@@ -60,11 +60,11 @@
 
 <p>Rozeber zelnou, hlávku, vykrájej všechny košťály a listy rozkrájej na nudličky co možná tenounké; potom usekej na drobounko okrouhlým nožem jednu velkou cibuli, dej oboje na misku, promíchej to náležitě, osol, polej dobrým vinním octem a brabancovým olejem, posyp tlučeným pepřem a dej to na stůl.</p>
 
-<a name="salat-ze-sparglu-chrestu"><h2>Salát ze šparglu (chřestu)</h2></a>
+<a name="salat-ze-sparglu"><h2>Salát ze šparglu</h2></a>
 
 <p>Ober pěkný špargl a spodní tvrdý díl odkroj, načež nech špargl ve slané vodě vařit, dej však pozor, aby se nepřevařil, potom vodu sceď, špargl nech vysáknout, pak ho urovnej pěkně na talíř, polej ho octem a olejem, posyp trochu tlučeným pepřem – a salát jest hotov.</p>
 
-<a name="salat-ze-sneku-hlemejzdu"><h2>Salát ze šneků (hlemejžďů)</h2></a>
+<a name="salat-ze-sneku"><h2>Salát ze šneků</h2></a>
 
 <p>Uvař patnáct šneků ve vodě do měkka, pak je vyndej z domečků, očisti je náležitě a nakrájej je po délce na tenké kousky; taktéž nakrájej na dlouho čtyry dobře očištěné sardele, usekej drobně jednu cibuli, všecko dobře promíchej, urovnej to na talíř nebo na misku, polej to octem a dobrým olejem, posyp tlučeným pepřem a oblož to nakrájenými koláčky z vajec na tvrdo uvařených.</p>
 
