--- a/src/zeleniny.html
+++ b/src/zeleniny.html
@@ -66,7 +66,7 @@
 
 <p>Očisti artičoky jako předešle a uvař je ne docela do měkka ve slané vodě, pak je vyndej na kastrol, jehož dno hodně máslem potřeno být musí, a nech je dusit; přilej k tomu trochu vinného octa a trochu dobré hovězí polívky, okořeň to tlučeným květem, pepřem a nakrájenou citronovou kůrou, a mezi dušením polévej artičoky stále tou šťávou; když jsou dost měkké, vyndej je na misku, do šťávy přidej lžíci polívkového rosolu čís. 54 (str. 25) a vařečku mouky s kusem másla rozdělanou, zamíchej tím, polej artičoky a nes je na stůl.</p>
 
-<a name="zelene-boby-fazole-s-jehnecim-masem"><h2>Zelené boby (fazole) s jehněčím masem</h2></a>
+<a name="zelene-boby-s-jehnecim-masem"><h2>Zelené boby s jehněčím masem</h2></a>
 
 <p>Uřež od mladých bobových lusek špičky, se hřbítků stáhni vlákna, každou lusku asi na dvakrát překroj a nech je vařit ve slané vodě. Dej na kastrol kus másla, kousek bílé cibule a kousek celeru, vlož na to mladé jehněčí maso, malinko ho osol a nech ho do měkká dusit. Udělej bílou jištičku, nalej na ni trochu hovězí polívky a šťávu z toho jehněčího masa, hodně to rozmíchej, vlej to. opět na maso a nech to trochu povařit. Nyní boby oceď a dej je na čistý rendlík, maso rozkrájej na kousky, vlož ho k bobům, omáčku proceď, okořeň květem a všecko ní polej; když to chceš dát na stůl, urovnej maso do prostřed mísy a boby okolo.</p>
 
